--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,63 +16,36 @@
     }
    ],
    "source": [
-    "import os\n",
-    "from openpyxl import load_workbook, Workbook\n",
+    "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter\n",
-    "from openpyxl.styles import NamedStyle\n",
-    "from datetime import datetime\n",
     "\n",
-    "# Function to convert date format from MM/DD/YYYY to MM-DD-YYYY\n",
-    "def convert_date_format(date_str):\n",
-    "    date_obj = datetime.strptime(date_str, \"%m/%d/%Y\")\n",
-    "    return date_obj.strftime(\"%m-%d-%Y\")\n",
+    "# Load the workbook\n",
+    "workbook = load_workbook(\"your_workbook.xlsx\")\n",
     "\n",
-    "# Path to the folder containing the files\n",
-    "folder_path = 'path/to/your/folder'\n",
+    "# Iterate over each sheet in the workbook\n",
+    "for sheet_name in workbook.sheetnames:\n",
+    "    sheet = workbook[sheet_name]\n",
+    "    \n",
+    "    # Iterate over each column\n",
+    "    for column in sheet.columns:\n",
+    "        # Get the maximum length of the cell value in each column\n",
+    "        max_length = 0\n",
+    "        column_letter = get_column_letter(column[0].column)\n",
+    "        for cell in column:\n",
+    "            if cell.value:\n",
+    "                max_length = max(max_length, len(str(cell.value)))\n",
+    "                \n",
+    "        # Set the column width based on the maximum length\n",
+    "        sheet.column_dimensions[column_letter].width = max_length\n",
     "\n",
-    "# Get the list of all files in the folder\n",
-    "file_names = os.listdir(folder_path)\n",
-    "\n",
-    "# Separate files with '#' and '$' in their names\n",
-    "hash_files = [os.path.join(folder_path, file_name) for file_name in file_names if '#' in file_name]\n",
-    "dollar_files = [os.path.join(folder_path, file_name) for file_name in file_names if '$' in file_name]\n",
-    "\n",
-    "# Create a new workbook\n",
-    "combined_workbook = Workbook()\n",
-    "\n",
-    "# Create a style for the date column\n",
-    "date_style = NamedStyle(name='date_style', number_format='MM-DD-YYYY')\n",
-    "combined_workbook.add_named_style(date_style)\n",
-    "\n",
-    "# Function to combine files into a sheet\n",
-    "def combine_files_into_sheet(files, sheet_name):\n",
-    "    combined_sheet = combined_workbook.create_sheet(title=sheet_name)\n",
-    "    for file_path in files:\n",
-    "        workbook = load_workbook(file_path, data_only=True)\n",
-    "        sheet = workbook.active\n",
-    "        for row_idx, row in enumerate(sheet.iter_rows(values_only=True), start=1):\n",
-    "            for col_idx, value in enumerate(row, start=1):\n",
-    "                if col_idx == 1 and isinstance(value, str):\n",
-    "                    value = convert_date_format(value)\n",
-    "                combined_sheet.cell(row=row_idx, column=col_idx, value=value)\n",
-    "                # Apply date format to the first column\n",
-    "                if col_idx == 1:\n",
-    "                    combined_sheet.cell(row=row_idx, column=col_idx).style = 'date_style'\n",
-    "\n",
-    "# Combine hash files into a sheet\n",
-    "combine_files_into_sheet(hash_files, 'Sheet(#)')\n",
-    "\n",
-    "# Combine dollar files into a sheet\n",
-    "combine_files_into_sheet(dollar_files, 'Sheet($)')\n",
-    "\n",
-    "# Save the combined workbook\n",
-    "combined_workbook.save('combined_workbook.xlsx')\n"
+    "# Save the modified workbook\n",
+    "workbook.save(\"modified_workbook.xlsx\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35cc39ff",
+   "id": "07888d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +66,7 @@
     "\n",
     "    # Set light blue background color for all rows in columns M to T\n",
     "    for row in range(2, ws.max_row + 1):\n",
-    "        for col in range(13, 21):  # Columns M to T\n",
+    "        for col in range(`13, 21):  # Columns M to T\n",
     "            cell = ws.cell(row=row, column=col)\n",
     "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
     "\n",
@@ -106,13 +79,14 @@
     "    apply_formatting(ws)\n",
     "\n",
     "# Save the modified combined workbook\n",
-    "combined_workbook.save('combined_workbook_formatted.xlsx')\n"
+    "combined_workbook.save('combined_workbook_formatted.xlsx')\n",
+    "`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9cad8a7",
+   "id": "ddd894d6",
    "metadata": {},
    "outputs": [],
    "source": [
