--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,36 +16,79 @@
     }
    ],
    "source": [
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.utils import get_column_letter\n",
+    "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "# Load the workbook\n",
-    "workbook = load_workbook(\"your_workbook.xlsx\")\n",
-    "\n",
-    "# Iterate over each sheet in the workbook\n",
-    "for sheet_name in workbook.sheetnames:\n",
-    "    sheet = workbook[sheet_name]\n",
+    "# Function to filter filenames based on presence of '$' or '#'\n",
+    "def filter_filenames(folder_path):\n",
+    "    dollar_files = []\n",
+    "    hash_files = []\n",
     "    \n",
-    "    # Iterate over each column\n",
-    "    for column in sheet.columns:\n",
-    "        # Get the maximum length of the cell value in each column\n",
-    "        max_length = 0\n",
-    "        column_letter = get_column_letter(column[0].column)\n",
-    "        for cell in column:\n",
-    "            if cell.value:\n",
-    "                max_length = max(max_length, len(str(cell.value)))\n",
-    "                \n",
-    "        # Set the column width based on the maximum length\n",
-    "        sheet.column_dimensions[column_letter].width = max_length\n",
+    "    for file_name in os.listdir(folder_path):\n",
+    "        if '$' in file_name:\n",
+    "            dollar_files.append(os.path.join(folder_path, file_name))\n",
+    "        elif '#' in file_name:\n",
+    "            hash_files.append(os.path.join(folder_path, file_name))\n",
+    "    \n",
+    "    return dollar_files, hash_files\n",
     "\n",
-    "# Save the modified workbook\n",
-    "workbook.save(\"modified_workbook.xlsx\")\n"
+    "# Function to filter rows based on unique 'SF' values and save filtered data to a new workbook\n",
+    "def filter_and_save_workbooks(file_list, output_folder):\n",
+    "    for file in file_list:\n",
+    "        # Read the workbook\n",
+    "        xls = pd.ExcelFile(file)\n",
+    "        sheet_names = xls.sheet_names\n",
+    "        \n",
+    "        # Create a copy of the workbook\n",
+    "        workbook_copy = pd.ExcelWriter(os.path.join(output_folder, os.path.basename(file)), engine='xlsxwriter')\n",
+    "        \n",
+    "        # Iterate over each sheet\n",
+    "        for sheet_name in sheet_names:\n",
+    "            df = pd.read_excel(file, sheet_name=sheet_name)\n",
+    "            \n",
+    "            # Check if it's one of the sheets we need to filter\n",
+    "            if sheet_name in ['Actuals ($)', 'Actuals (#)']:\n",
+    "                # Get unique 'SF' values\n",
+    "                unique_sf_values = df['SF'].unique()\n",
+    "                \n",
+    "                # Iterate over unique 'SF' values\n",
+    "                for sf_value in unique_sf_values:\n",
+    "                    # Filter rows based on 'SF' value\n",
+    "                    filtered_df = df[df['SF'] == sf_value]\n",
+    "                    \n",
+    "                    # Save filtered data to the copy of the workbook\n",
+    "                    filtered_df.to_excel(workbook_copy, index=False, sheet_name=f\"{sheet_name}_{sf_value}\")\n",
+    "            else:\n",
+    "                # Save the sheet as it is to the copy of the workbook\n",
+    "                df.to_excel(workbook_copy, index=False, sheet_name=sheet_name)\n",
+    "        \n",
+    "        # Save the copy of the workbook\n",
+    "        workbook_copy.save()\n",
+    "\n",
+    "# Folder path containing the input workbooks\n",
+    "input_folder = 'input_workbooks/'\n",
+    "\n",
+    "# Get lists of filenames with '$' and '#' in their names\n",
+    "dollar_files, hash_files = filter_filenames(input_folder)\n",
+    "\n",
+    "# Output folder for saving filtered workbooks\n",
+    "output_folder = 'filtered_workbooks/'\n",
+    "\n",
+    "# Create output folder if it doesn't exist\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "# Filter and save workbooks for Actuals ($) sheets\n",
+    "filter_and_save_workbooks(dollar_files, output_folder)\n",
+    "\n",
+    "# Filter and save workbooks for Actuals (#) sheets\n",
+    "filter_and_save_workbooks(hash_files, output_folder)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07888d76",
+   "id": "373dee2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd894d6",
+   "id": "97ad7565",
    "metadata": {},
    "outputs": [],
    "source": [
