--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -19,57 +19,41 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Function to filter filenames based on presence of '$' or '#'\n",
-    "def filter_filenames(folder_path):\n",
-    "    dollar_files = []\n",
-    "    hash_files = []\n",
+    "# Function to filter and save data for each unique 'SF' value\n",
+    "def filter_and_save_workbook(main_workbook, output_folder):\n",
+    "    # Read the main workbook\n",
+    "    xls = pd.ExcelFile(main_workbook)\n",
+    "    sheet_names = xls.sheet_names\n",
     "    \n",
-    "    for file_name in os.listdir(folder_path):\n",
-    "        if '$' in file_name:\n",
-    "            dollar_files.append(os.path.join(folder_path, file_name))\n",
-    "        elif '#' in file_name:\n",
-    "            hash_files.append(os.path.join(folder_path, file_name))\n",
-    "    \n",
-    "    return dollar_files, hash_files\n",
-    "\n",
-    "# Function to filter rows based on unique 'SF' values and save filtered data to a new workbook\n",
-    "def filter_and_save_workbooks(file_list, output_folder):\n",
-    "    for file in file_list:\n",
-    "        # Read the workbook\n",
-    "        xls = pd.ExcelFile(file)\n",
-    "        sheet_names = xls.sheet_names\n",
+    "    # Iterate over each sheet in the main workbook\n",
+    "    for sheet_name in sheet_names:\n",
+    "        # Read the sheet\n",
+    "        df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
     "        \n",
-    "        # Create a copy of the workbook\n",
-    "        workbook_copy = pd.ExcelWriter(os.path.join(output_folder, os.path.basename(file)), engine='xlsxwriter')\n",
-    "        \n",
-    "        # Iterate over each sheet\n",
-    "        for sheet_name in sheet_names:\n",
-    "            df = pd.read_excel(file, sheet_name=sheet_name)\n",
+    "        # Check if 'SF' column exists in the sheet\n",
+    "        if 'SF' in df.columns:\n",
+    "            # Get unique 'SF' values\n",
+    "            unique_sf_values = df['SF'].unique()\n",
     "            \n",
-    "            # Check if it's one of the sheets we need to filter\n",
-    "            if sheet_name in ['Actuals ($)', 'Actuals (#)']:\n",
-    "                # Get unique 'SF' values\n",
-    "                unique_sf_values = df['SF'].unique()\n",
+    "            # Create a copy of the workbook\n",
+    "            workbook_copy = pd.ExcelWriter(os.path.join(output_folder, f\"{sheet_name}_filtered.xlsx\"), engine='xlsxwriter')\n",
+    "            \n",
+    "            # Iterate over unique 'SF' values\n",
+    "            for sf_value in unique_sf_values:\n",
+    "                # Filter rows based on 'SF' value\n",
+    "                filtered_df = df[df['SF'] == sf_value]\n",
     "                \n",
-    "                # Iterate over unique 'SF' values\n",
-    "                for sf_value in unique_sf_values:\n",
-    "                    # Filter rows based on 'SF' value\n",
-    "                    filtered_df = df[df['SF'] == sf_value]\n",
-    "                    \n",
-    "                    # Save filtered data to the copy of the workbook\n",
-    "                    filtered_df.to_excel(workbook_copy, index=False, sheet_name=f\"{sheet_name}_{sf_value}\")\n",
-    "            else:\n",
-    "                # Save the sheet as it is to the copy of the workbook\n",
-    "                df.to_excel(workbook_copy, index=False, sheet_name=sheet_name)\n",
-    "        \n",
-    "        # Save the copy of the workbook\n",
-    "        workbook_copy.save()\n",
+    "                # Save filtered data to the copy of the workbook\n",
+    "                filtered_df.to_excel(workbook_copy, index=False, sheet_name=f\"{sheet_name}_{sf_value}\")\n",
+    "            \n",
+    "            # Save the copy of the workbook\n",
+    "            workbook_copy.save()\n",
+    "        else:\n",
+    "            # If 'SF' column doesn't exist, copy the entire sheet to the output folder\n",
+    "            df.to_excel(os.path.join(output_folder, f\"{sheet_name}.xlsx\"), index=False)\n",
     "\n",
-    "# Folder path containing the input workbooks\n",
-    "input_folder = 'input_workbooks/'\n",
-    "\n",
-    "# Get lists of filenames with '$' and '#' in their names\n",
-    "dollar_files, hash_files = filter_filenames(input_folder)\n",
+    "# Main workbook containing multiple sheets\n",
+    "main_workbook = 'main_workbook.xlsx'\n",
     "\n",
     "# Output folder for saving filtered workbooks\n",
     "output_folder = 'filtered_workbooks/'\n",
@@ -78,17 +62,14 @@
     "if not os.path.exists(output_folder):\n",
     "    os.makedirs(output_folder)\n",
     "\n",
-    "# Filter and save workbooks for Actuals ($) sheets\n",
-    "filter_and_save_workbooks(dollar_files, output_folder)\n",
-    "\n",
-    "# Filter and save workbooks for Actuals (#) sheets\n",
-    "filter_and_save_workbooks(hash_files, output_folder)\n"
+    "# Filter and save data for each sheet in the main workbook\n",
+    "filter_and_save_workbook(main_workbook, output_folder)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "373dee2b",
+   "id": "eff3f919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97ad7565",
+   "id": "648ec1d7",
    "metadata": {},
    "outputs": [],
    "source": [
