--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -20,40 +20,42 @@
     "import os\n",
     "\n",
     "# Function to filter and save data for each unique 'SF' value\n",
-    "def filter_and_save_workbook(main_workbook, output_folder):\n",
+    "def filter_and_save_workbooks(main_workbook, output_folder):\n",
     "    # Read the main workbook\n",
     "    xls = pd.ExcelFile(main_workbook)\n",
     "    sheet_names = xls.sheet_names\n",
     "    \n",
-    "    # Iterate over each sheet in the main workbook\n",
+    "    # Create a list of unique 'SF' values\n",
+    "    unique_sf_values = set()\n",
     "    for sheet_name in sheet_names:\n",
-    "        # Read the sheet\n",
     "        df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
-    "        \n",
-    "        # Check if 'SF' column exists in the sheet\n",
     "        if 'SF' in df.columns:\n",
-    "            # Get unique 'SF' values\n",
-    "            unique_sf_values = df['SF'].unique()\n",
+    "            unique_sf_values.update(df['SF'].unique())\n",
+    "    \n",
+    "    # Iterate over each unique 'SF' value\n",
+    "    for sf_value in unique_sf_values:\n",
+    "        # Create a new workbook\n",
+    "        new_workbook = pd.ExcelWriter(os.path.join(output_folder, f\"wb1_SF_{sf_value}.xlsx\"), engine='xlsxwriter')\n",
+    "        \n",
+    "        # Iterate over each sheet in the main workbook\n",
+    "        for sheet_name in sheet_names:\n",
+    "            # Read the sheet\n",
+    "            df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
     "            \n",
-    "            # Create a copy of the workbook\n",
-    "            workbook_copy = pd.ExcelWriter(os.path.join(output_folder, f\"{sheet_name}_filtered.xlsx\"), engine='xlsxwriter')\n",
+    "            # Filter data for 'Actuals($)' and 'Actuals(#)' sheets based on 'SF' value\n",
+    "            if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
+    "                df_filtered = df[df['SF'] == sf_value]\n",
+    "            else:\n",
+    "                df_filtered = df.copy()  # Keep other sheets as is\n",
     "            \n",
-    "            # Iterate over unique 'SF' values\n",
-    "            for sf_value in unique_sf_values:\n",
-    "                # Filter rows based on 'SF' value\n",
-    "                filtered_df = df[df['SF'] == sf_value]\n",
-    "                \n",
-    "                # Save filtered data to the copy of the workbook\n",
-    "                filtered_df.to_excel(workbook_copy, index=False, sheet_name=f\"{sheet_name}_{sf_value}\")\n",
-    "            \n",
-    "            # Save the copy of the workbook\n",
-    "            workbook_copy.save()\n",
-    "        else:\n",
-    "            # If 'SF' column doesn't exist, copy the entire sheet to the output folder\n",
-    "            df.to_excel(os.path.join(output_folder, f\"{sheet_name}.xlsx\"), index=False)\n",
+    "            # Write filtered data to the new workbook\n",
+    "            df_filtered.to_excel(new_workbook, index=False, sheet_name=sheet_name)\n",
+    "        \n",
+    "        # Save the new workbook\n",
+    "        new_workbook.save()\n",
     "\n",
     "# Main workbook containing multiple sheets\n",
-    "main_workbook = 'main_workbook.xlsx'\n",
+    "main_workbook = 'wb1.xlsx'\n",
     "\n",
     "# Output folder for saving filtered workbooks\n",
     "output_folder = 'filtered_workbooks/'\n",
@@ -62,14 +64,14 @@
     "if not os.path.exists(output_folder):\n",
     "    os.makedirs(output_folder)\n",
     "\n",
-    "# Filter and save data for each sheet in the main workbook\n",
-    "filter_and_save_workbook(main_workbook, output_folder)\n"
+    "# Filter and save data for each unique 'SF' value\n",
+    "filter_and_save_workbooks(main_workbook, output_folder)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff3f919",
+   "id": "5b825ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648ec1d7",
+   "id": "662a3231",
    "metadata": {},
    "outputs": [],
    "source": [
