--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -34,25 +34,29 @@
     "    \n",
     "    # Iterate over each unique 'SF' value\n",
     "    for sf_value in unique_sf_values:\n",
-    "        # Create a new workbook\n",
-    "        new_workbook = pd.ExcelWriter(os.path.join(output_folder, f\"wb1_SF_{sf_value}.xlsx\"), engine='xlsxwriter')\n",
-    "        \n",
-    "        # Iterate over each sheet in the main workbook\n",
-    "        for sheet_name in sheet_names:\n",
-    "            # Read the sheet\n",
-    "            df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
-    "            \n",
-    "            # Filter data for 'Actuals($)' and 'Actuals(#)' sheets based on 'SF' value\n",
-    "            if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
-    "                df_filtered = df[df['SF'] == sf_value]\n",
-    "            else:\n",
-    "                df_filtered = df.copy()  # Keep other sheets as is\n",
-    "            \n",
-    "            # Write filtered data to the new workbook\n",
-    "            df_filtered.to_excel(new_workbook, index=False, sheet_name=sheet_name)\n",
-    "        \n",
+    "        # Create a copy of the main workbook\n",
+    "        new_workbook_name = os.path.join(output_folder, f\"wb1_{sf_value}.xlsx\")\n",
+    "        os.system(f'cp \"{main_workbook}\" \"{new_workbook_name}\"')\n",
+    "\n",
+    "        # Open the new workbook\n",
+    "        xls_new = pd.ExcelFile(new_workbook_name)\n",
+    "        writer = pd.ExcelWriter(new_workbook_name, engine='xlsxwriter')\n",
+    "\n",
+    "        # Iterate over each sheet in the new workbook\n",
+    "        for sheet_name in xls_new.sheet_names:\n",
+    "            df = pd.read_excel(new_workbook_name, sheet_name=sheet_name)\n",
+    "            if 'SF' in df.columns:\n",
+    "                # Filter data for 'Actuals($)' and 'Actuals(#)' sheets based on 'SF' value\n",
+    "                if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
+    "                    df_filtered = df[df['SF'] == sf_value]\n",
+    "                else:\n",
+    "                    df_filtered = df.copy()  # Keep other sheets as is\n",
+    "\n",
+    "                # Write filtered data to the new workbook\n",
+    "                df_filtered.to_excel(writer, index=False, sheet_name=sheet_name)\n",
+    "\n",
     "        # Save the new workbook\n",
-    "        new_workbook.save()\n",
+    "        writer.save()\n",
     "\n",
     "# Main workbook containing multiple sheets\n",
     "main_workbook = 'wb1.xlsx'\n",
@@ -71,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b825ffd",
+   "id": "83cad6c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662a3231",
+   "id": "1696cd8e",
    "metadata": {},
    "outputs": [],
    "source": [
