--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -34,17 +34,13 @@
     "    \n",
     "    # Iterate over each unique 'SF' value\n",
     "    for sf_value in unique_sf_values:\n",
-    "        # Create a copy of the main workbook\n",
+    "        # Create a new workbook\n",
     "        new_workbook_name = os.path.join(output_folder, f\"wb1_{sf_value}.xlsx\")\n",
-    "        os.system(f'cp \"{main_workbook}\" \"{new_workbook_name}\"')\n",
-    "\n",
-    "        # Open the new workbook\n",
-    "        xls_new = pd.ExcelFile(new_workbook_name)\n",
     "        writer = pd.ExcelWriter(new_workbook_name, engine='xlsxwriter')\n",
     "\n",
-    "        # Iterate over each sheet in the new workbook\n",
-    "        for sheet_name in xls_new.sheet_names:\n",
-    "            df = pd.read_excel(new_workbook_name, sheet_name=sheet_name)\n",
+    "        # Iterate over each sheet in the main workbook\n",
+    "        for sheet_name in sheet_names:\n",
+    "            df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
     "            if 'SF' in df.columns:\n",
     "                # Filter data for 'Actuals($)' and 'Actuals(#)' sheets based on 'SF' value\n",
     "                if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
@@ -75,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83cad6c3",
+   "id": "589be486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1696cd8e",
+   "id": "d71fd469",
    "metadata": {},
    "outputs": [],
    "source": [
