--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -16,43 +16,54 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "import os\n",
+    "import win32com.client as win32\n",
     "\n",
     "# Function to filter and save data for each unique 'SF' value\n",
     "def filter_and_save_workbooks(main_workbook, output_folder):\n",
-    "    # Read the main workbook\n",
-    "    xls = pd.ExcelFile(main_workbook)\n",
-    "    sheet_names = xls.sheet_names\n",
-    "    \n",
+    "    # Create Excel application object\n",
+    "    excel = win32.Dispatch('Excel.Application')\n",
+    "    excel.Visible = False  # Hide Excel window\n",
+    "\n",
+    "    # Open the main workbook\n",
+    "    workbook = excel.Workbooks.Open(main_workbook)\n",
+    "\n",
+    "    # Get sheet names\n",
+    "    sheet_names = [sheet.Name for sheet in workbook.Sheets]\n",
+    "\n",
     "    # Create a list of unique 'SF' values\n",
     "    unique_sf_values = set()\n",
     "    for sheet_name in sheet_names:\n",
-    "        df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
-    "        if 'SF' in df.columns:\n",
-    "            unique_sf_values.update(df['SF'].unique())\n",
-    "    \n",
+    "        sheet = workbook.Sheets(sheet_name)\n",
+    "        last_row = sheet.Cells(sheet.Rows.Count, 1).End(win32.xlUp).Row\n",
+    "        sf_values = sheet.Range(f\"A2:A{last_row}\").Value\n",
+    "        unique_sf_values.update(sf_values)\n",
+    "\n",
     "    # Iterate over each unique 'SF' value\n",
     "    for sf_value in unique_sf_values:\n",
-    "        # Create a new workbook\n",
     "        new_workbook_name = os.path.join(output_folder, f\"wb1_{sf_value}.xlsx\")\n",
-    "        writer = pd.ExcelWriter(new_workbook_name, engine='xlsxwriter')\n",
+    "        new_workbook = excel.Workbooks.Add()  # Create a new workbook\n",
     "\n",
     "        # Iterate over each sheet in the main workbook\n",
     "        for sheet_name in sheet_names:\n",
-    "            df = pd.read_excel(main_workbook, sheet_name=sheet_name)\n",
-    "            if 'SF' in df.columns:\n",
-    "                # Filter data for 'Actuals($)' and 'Actuals(#)' sheets based on 'SF' value\n",
-    "                if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
-    "                    df_filtered = df[df['SF'] == sf_value]\n",
-    "                else:\n",
-    "                    df_filtered = df.copy()  # Keep other sheets as is\n",
+    "            sheet = workbook.Sheets(sheet_name)\n",
+    "            sheet.Copy(Before=new_workbook.Sheets(1))  # Copy sheet to the new workbook\n",
     "\n",
-    "                # Write filtered data to the new workbook\n",
-    "                df_filtered.to_excel(writer, index=False, sheet_name=sheet_name)\n",
+    "            # Delete rows where 'SF' value does not match the current 'SF' value\n",
+    "            if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
+    "                new_sheet = new_workbook.Sheets(sheet.Name)\n",
+    "                last_row = new_sheet.Cells(new_sheet.Rows.Count, 1).End(win32.xlUp).Row\n",
+    "                for i in range(last_row, 1, -1):\n",
+    "                    if new_sheet.Cells(i, 1).Value != sf_value:\n",
+    "                        new_sheet.Rows(i).Delete()\n",
     "\n",
     "        # Save the new workbook\n",
-    "        writer.save()\n",
+    "        new_workbook.SaveAs(new_workbook_name)\n",
+    "        new_workbook.Close()\n",
+    "\n",
+    "    # Close the main workbook\n",
+    "    workbook.Close()\n",
+    "    excel.Quit()\n",
     "\n",
     "# Main workbook containing multiple sheets\n",
     "main_workbook = 'wb1.xlsx'\n",
@@ -71,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "589be486",
+   "id": "2d992411",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71fd469",
+   "id": "ad547197",
    "metadata": {},
    "outputs": [],
    "source": [
