--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -19,6 +19,9 @@
     "import os\n",
     "import win32com.client as win32\n",
     "\n",
+    "# Constants for Excel\n",
+    "xlUp = -4162  # Numeric value for xlUp\n",
+    "\n",
     "# Function to filter and save data for each unique 'SF' value\n",
     "def filter_and_save_workbooks(main_workbook, output_folder):\n",
     "    # Create Excel application object\n",
@@ -35,7 +38,7 @@
     "    unique_sf_values = set()\n",
     "    for sheet_name in sheet_names:\n",
     "        sheet = workbook.Sheets(sheet_name)\n",
-    "        last_row = sheet.Cells(sheet.Rows.Count, 1).End(win32.xlUp).Row\n",
+    "        last_row = sheet.Cells(sheet.Rows.Count, 1).End(xlUp).Row\n",
     "        sf_values = sheet.Range(f\"A2:A{last_row}\").Value\n",
     "        unique_sf_values.update(sf_values)\n",
     "\n",
@@ -52,7 +55,7 @@
     "            # Delete rows where 'SF' value does not match the current 'SF' value\n",
     "            if sheet_name == 'Actuals($)' or sheet_name == 'Actuals(#)':\n",
     "                new_sheet = new_workbook.Sheets(sheet.Name)\n",
-    "                last_row = new_sheet.Cells(new_sheet.Rows.Count, 1).End(win32.xlUp).Row\n",
+    "                last_row = new_sheet.Cells(new_sheet.Rows.Count, 1).End(xlUp).Row\n",
     "                for i in range(last_row, 1, -1):\n",
     "                    if new_sheet.Cells(i, 1).Value != sf_value:\n",
     "                        new_sheet.Rows(i).Delete()\n",
@@ -82,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d992411",
+   "id": "12db5f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad547197",
+   "id": "e866e8d5",
    "metadata": {},
    "outputs": [],
    "source": [
