--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,6 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "92fa580b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import openpyxl\n",
+    "import win32com.client as win32\n",
+    "\n",
+    "# Function to create a list of unique 'SF' values and save it to a file\n",
+    "def create_unique_sf_list(input_workbook, output_file):\n",
+    "    unique_sf_values = set()\n",
+    "\n",
+    "    # Open the workbook\n",
+    "    workbook = openpyxl.load_workbook(input_workbook, read_only=True)\n",
+    "\n",
+    "    # Iterate over each sheet\n",
+    "    for sheet in workbook:\n",
+    "        if sheet.title == 'Actuals($)':\n",
+    "            for row in sheet.iter_rows(min_row=2, values_only=True):\n",
+    "                unique_sf_values.add(row[0])  # Assuming 'SF' column is the first column\n",
+    "\n",
+    "    # Save unique 'SF' values to a file\n",
+    "    with open(output_file, 'w') as file:\n",
+    "        for sf_value in unique_sf_values:\n",
+    "            file.write(f\"{sf_value}\\n\")\n",
+    "\n",
+    "    print(\"Unique SF values list created and saved successfully.\")\n",
+    "\n",
+    "# Function to read unique 'SF' values from file and perform remaining operations\n",
+    "def process_workbooks(input_workbook, unique_sf_file, output_folder):\n",
+    "    # Read unique 'SF' values from file\n",
+    "    with open(unique_sf_file, 'r') as file:\n",
+    "        unique_sf_values = [line.strip() for line in file]\n",
+    "\n",
+    "    # Create Excel application object\n",
+    "    excel = win32.Dispatch('Excel.Application')\n",
+    "    excel.Visible = False  # Hide Excel window\n",
+    "\n",
+    "    # Open the main workbook\n",
+    "    workbook = excel.Workbooks.Open(input_workbook)\n",
+    "\n",
+    "    # Get sheet names\n",
+    "    sheet_names = [sheet.Name for sheet in workbook.Sheets]\n",
+    "\n",
+    "    # Iterate over each unique 'SF' value\n",
+    "    for sf_value in unique_sf_values:\n",
+    "        new_workbook_name = os.path.join(output_folder, f\"wb1_{sf_value}.xlsx\")\n",
+    "        new_workbook = excel.Workbooks.Add()  # Create a new workbook\n",
+    "\n",
+    "        # Iterate over each sheet in the main workbook\n",
+    "        for sheet_name in sheet_names:\n",
+    "            sheet = workbook.Sheets(sheet_name)\n",
+    "            sheet.Copy(Before=new_workbook.Sheets(1))  # Copy sheet to the new workbook\n",
+    "\n",
+    "            # Delete rows where 'SF' value does not match the current 'SF' value\n",
+    "            if sheet_name == 'Actuals($)':\n",
+    "                new_sheet = new_workbook.Sheets(sheet.Name)\n",
+    "                last_row = new_sheet.Cells(new_sheet.Rows.Count, 1).End(-4162).Row\n",
+    "                for i in range(last_row, 1, -1):\n",
+    "                    if new_sheet.Cells(i, 1).Value != sf_value:\n",
+    "                        new_sheet.Rows(i).Delete()\n",
+    "\n",
+    "        # Save the new workbook\n",
+    "        new_workbook.SaveAs(new_workbook_name)\n",
+    "        new_workbook.Close()\n",
+    "\n",
+    "    # Close the main workbook\n",
+    "    workbook.Close()\n",
+    "    excel.Quit()\n",
+    "\n",
+    "# Main workbook containing multiple sheets\n",
+    "input_workbook = 'wb1.xlsx'\n",
+    "\n",
+    "# Output folder for saving filtered workbooks\n",
+    "output_folder = 'filtered_workbooks/'\n",
+    "\n",
+    "# Create output folder if it doesn't exist\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "# File to store unique 'SF' values\n",
+    "unique_sf_file = 'unique_sf_values.txt'\n",
+    "\n",
+    "# Create unique 'SF' values list and save it to a file\n",
+    "create_unique_sf_list(input_workbook, unique_sf_file)\n",
+    "\n",
+    "# Process workbooks using unique 'SF' values list\n",
+    "process_workbooks(input_workbook, unique_sf_file, output_folder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "df2fc39f",
    "metadata": {},
@@ -85,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12db5f7a",
+   "id": "f7dcf5fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e866e8d5",
+   "id": "9a5a5960",
    "metadata": {},
    "outputs": [],
    "source": [
