--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92fa580b",
+   "id": "e595a5f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unique SF values\n",
+    "import openpyxl\n",
+    "\n",
+    "# Function to create a list of unique 'SF' values and save it to a file\n",
+    "def create_unique_sf_list(input_workbook, output_file):\n",
+    "    print(\"Creating unique SF values list...\")\n",
+    "    unique_sf_values = set()\n",
+    "\n",
+    "    # Open the workbook\n",
+    "    workbook = openpyxl.load_workbook(input_workbook, read_only=True)\n",
+    "\n",
+    "    # Iterate over each sheet\n",
+    "    for sheet in workbook:\n",
+    "        if sheet.title == 'Actuals($)':\n",
+    "            print(\"Reading 'Actuals($)' sheet...\")\n",
+    "            for row in sheet.iter_rows(min_row=2, values_only=True):\n",
+    "                unique_sf_values.add(row[0])  # Assuming 'SF' column is the first column\n",
+    "\n",
+    "    # Save unique 'SF' values to a file\n",
+    "    print(\"Saving unique SF values to file...\")\n",
+    "    with open(output_file, 'w') as file:\n",
+    "        for sf_value in unique_sf_values:\n",
+    "            file.write(f\"{sf_value}\\n\")\n",
+    "\n",
+    "    print(\"Unique SF values list created and saved successfully.\")\n",
+    "\n",
+    "# Function to read unique 'SF' values from file and perform remaining operations\n",
+    "def process_workbooks(input_workbook, unique_sf_file, output_folder):\n",
+    "    print(\"Reading unique SF values from file...\")\n",
+    "    # Read unique 'SF' values from file\n",
+    "    with open(unique_sf_file, 'r') as file:\n",
+    "        unique_sf_values = [line.strip() for line in file]\n",
+    "\n",
+    "    print(\"Processing workbooks...\")\n",
+    "\n",
+    "    # Continue with the remaining code...\n",
+    "\n",
+    "# Main workbook containing multiple sheets\n",
+    "input_workbook = 'wb1.xlsx'\n",
+    "\n",
+    "# Output folder for saving filtered workbooks\n",
+    "output_folder = 'filtered_workbooks/'\n",
+    "\n",
+    "# File to store unique 'SF' values\n",
+    "unique_sf_file = 'unique_sf_values.txt'\n",
+    "\n",
+    "# Create unique 'SF' values list and save it to a file\n",
+    "create_unique_sf_list(input_workbook, unique_sf_file)\n",
+    "\n",
+    "# Process workbooks using unique 'SF' values list\n",
+    "process_workbooks(input_workbook, unique_sf_file, output_folder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0ea481c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7dcf5fd",
+   "id": "027c4cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a5a5960",
+   "id": "380e12d2",
    "metadata": {},
    "outputs": [],
    "source": [
