--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,67 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e595a5f3",
+   "id": "e3dd0a58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unique SF values\n",
-    "import openpyxl\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "# Function to create a list of unique 'SF' values and save it to a file\n",
-    "def create_unique_sf_list(input_workbook, output_file):\n",
-    "    print(\"Creating unique SF values list...\")\n",
-    "    unique_sf_values = set()\n",
+    "# Load the workbook\n",
+    "workbook = load_workbook(\"your_workbook.xlsx\")\n",
     "\n",
-    "    # Open the workbook\n",
-    "    workbook = openpyxl.load_workbook(input_workbook, read_only=True)\n",
+    "# Initialize a list to store unique SF values while preserving their sequence\n",
+    "sf_values = []\n",
     "\n",
-    "    # Iterate over each sheet\n",
-    "    for sheet in workbook:\n",
-    "        if sheet.title == 'Actuals($)':\n",
-    "            print(\"Reading 'Actuals($)' sheet...\")\n",
-    "            for row in sheet.iter_rows(min_row=2, values_only=True):\n",
-    "                unique_sf_values.add(row[0])  # Assuming 'SF' column is the first column\n",
+    "# Iterate through the sheets\n",
+    "for sheet_name in [\"Actuals($)\", \"Actuals(#)\"]:\n",
+    "    # Access the sheet\n",
+    "    sheet = workbook[sheet_name]\n",
+    "    \n",
+    "    # Find the index of the SF column\n",
+    "    sf_column_index = None\n",
+    "    for col_idx in range(1, sheet.max_column + 1):\n",
+    "        if sheet.cell(row=1, column=col_idx).value == 'SF':\n",
+    "            sf_column_index = col_idx\n",
+    "            break\n",
+    "    \n",
+    "    if sf_column_index:\n",
+    "        # Iterate through rows to extract SF values\n",
+    "        for row_idx in range(2, sheet.max_row + 1):\n",
+    "            sf_value = sheet.cell(row=row_idx, column=sf_column_index).value\n",
+    "            if sf_value and sf_value not in sf_values:\n",
+    "                sf_values.append(sf_value)\n",
     "\n",
-    "    # Save unique 'SF' values to a file\n",
-    "    print(\"Saving unique SF values to file...\")\n",
-    "    with open(output_file, 'w') as file:\n",
-    "        for sf_value in unique_sf_values:\n",
-    "            file.write(f\"{sf_value}\\n\")\n",
+    "# Save the unique SF values to a file while maintaining sequence\n",
+    "with open(\"unique_sf_values.txt\", \"w\") as file:\n",
+    "    for sf_value in sf_values:\n",
+    "        file.write(str(sf_value) + \"\\n\")\n",
     "\n",
-    "    print(\"Unique SF values list created and saved successfully.\")\n",
-    "\n",
-    "# Function to read unique 'SF' values from file and perform remaining operations\n",
-    "def process_workbooks(input_workbook, unique_sf_file, output_folder):\n",
-    "    print(\"Reading unique SF values from file...\")\n",
-    "    # Read unique 'SF' values from file\n",
-    "    with open(unique_sf_file, 'r') as file:\n",
-    "        unique_sf_values = [line.strip() for line in file]\n",
-    "\n",
-    "    print(\"Processing workbooks...\")\n",
-    "\n",
-    "    # Continue with the remaining code...\n",
-    "\n",
-    "# Main workbook containing multiple sheets\n",
-    "input_workbook = 'wb1.xlsx'\n",
-    "\n",
-    "# Output folder for saving filtered workbooks\n",
-    "output_folder = 'filtered_workbooks/'\n",
-    "\n",
-    "# File to store unique 'SF' values\n",
-    "unique_sf_file = 'unique_sf_values.txt'\n",
-    "\n",
-    "# Create unique 'SF' values list and save it to a file\n",
-    "create_unique_sf_list(input_workbook, unique_sf_file)\n",
-    "\n",
-    "# Process workbooks using unique 'SF' values list\n",
-    "process_workbooks(input_workbook, unique_sf_file, output_folder)\n"
+    "print(\"Unique SF values list created and saved successfully.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0ea481c",
+   "id": "0dc703c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "027c4cdb",
+   "id": "2e5e01ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380e12d2",
+   "id": "1b9e3ef3",
    "metadata": {},
    "outputs": [],
    "source": [
