--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -2,8 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ba56b83c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Load the workbook\n",
+    "workbook = load_workbook(\"your_workbook.xlsx\")\n",
+    "\n",
+    "# Initialize sets to store unique SF values\n",
+    "sf_values = set()\n",
+    "\n",
+    "# Iterate through the sheets\n",
+    "for sheet_name in [\"Actuals($)\", \"Actuals(#)\"]:\n",
+    "    # Access the sheet\n",
+    "    sheet = workbook[sheet_name]\n",
+    "    \n",
+    "    # Find the index of the SF column\n",
+    "    sf_column_index = None\n",
+    "    for col_idx in range(1, sheet.max_column + 1):\n",
+    "        if sheet.cell(row=1, column=col_idx).value == 'SF':\n",
+    "            sf_column_index = col_idx\n",
+    "            break\n",
+    "    \n",
+    "    if sf_column_index:\n",
+    "        # Iterate through rows to extract SF values\n",
+    "        for row_idx in range(2, sheet.max_row + 1):\n",
+    "            sf_value = sheet.cell(row=row_idx, column=sf_column_index).value\n",
+    "            if sf_value:\n",
+    "                sf_values.add(sf_value)\n",
+    "\n",
+    "# Save the unique SF values to a file\n",
+    "with open(\"unique_sf_values.txt\", \"w\") as file:\n",
+    "    for sf_value in sf_values:\n",
+    "        file.write(str(sf_value) + \"\\n\")\n",
+    "\n",
+    "print(\"Unique SF values list created and saved successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
-   "id": "76b26a7b",
+   "id": "ec7a1597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ff28b3ba",
+   "id": "f4912f9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c72cac16",
+   "id": "1a16cabd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b89c1cd5",
+   "id": "8c09a31f",
    "metadata": {},
    "outputs": [
     {
@@ -182,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a7cc701d",
+   "execution_count": 26,
+   "id": "ed292f7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8411cebe",
+   "id": "04c6cc19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "786cbfec",
+   "id": "ba2187e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -281,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf4b5ed",
+   "id": "c16e2dcf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -289,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53cb6e9",
+   "id": "6e3baa15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -297,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6207368e",
+   "id": "1b2c18c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d1d922b",
+   "id": "ba669a35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -313,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "68383a35",
+   "id": "1026a91b",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8effe368",
+   "id": "a190e24c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -379,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aab47bd",
+   "id": "da64a6d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -387,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "511a02e8",
+   "id": "91acedfe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -395,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce567363",
+   "id": "d6d6d01e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -403,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58a69620",
+   "id": "564ef62f",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a98664",
+   "id": "836be245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381a1fe8",
+   "id": "8397cbc1",
    "metadata": {},
    "outputs": [],
    "source": [
