--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba56b83c",
+   "id": "0e20b063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter and copy the sheets\n",
+    "import openpyxl\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "from openpyxl.utils.cell import get_column_letter\n",
+    "\n",
+    "# Function to read unique values from a column in a sheet\n",
+    "def read_unique_values(file_path, sheet_name, column_name):\n",
+    "    workbook = openpyxl.load_workbook(file_path)\n",
+    "    sheet = workbook[sheet_name]\n",
+    "    unique_values = set(sheet[column_name][1:])  # Exclude header row\n",
+    "    unique_values = [value.value for value in unique_values if value.value is not None]  # Filter out None values\n",
+    "    return unique_values\n",
+    "\n",
+    "# Function to copy filtered data to a new sheet\n",
+    "def copy_filtered_data(source_sheet, target_sheet, unique_value):\n",
+    "    for row in source_sheet.iter_rows(min_row=2, values_only=True):\n",
+    "        if row[4] == unique_value:  # Assuming SF column is the 5th column (index 4)\n",
+    "            target_sheet.append(row)\n",
+    "\n",
+    "# Main function\n",
+    "def process_main_workbook(main_file_path):\n",
+    "    # Read unique values from 'Actuals($)' and 'Actuals(#)' sheets\n",
+    "    unique_values_dollar = read_unique_values(main_file_path, 'Actuals($)', 'SF')\n",
+    "    unique_values_hash = read_unique_values(main_file_path, 'Actuals(#)', 'SF')\n",
+    "    \n",
+    "    for unique_value in unique_values_dollar:\n",
+    "        # Create a copy of the main workbook\n",
+    "        new_workbook = openpyxl.load_workbook(main_file_path)\n",
+    "        \n",
+    "        # Apply filters to 'Actuals($)' and 'Actuals(#)' sheets\n",
+    "        dollar_sheet = new_workbook['Actuals($)']\n",
+    "        hash_sheet = new_workbook['Actuals(#)']\n",
+    "        dollar_filtered_sheet = new_workbook.create_sheet(title=f'Actuals($)_fil_{unique_value}')\n",
+    "        hash_filtered_sheet = new_workbook.create_sheet(title=f'Actuals(#)_fil_{unique_value}')\n",
+    "        \n",
+    "        # Copy filtered data to new sheets\n",
+    "        copy_filtered_data(dollar_sheet, dollar_filtered_sheet, unique_value)\n",
+    "        copy_filtered_data(hash_sheet, hash_filtered_sheet, unique_value)\n",
+    "        \n",
+    "        # Delete the original sheets\n",
+    "        new_workbook.remove(dollar_sheet)\n",
+    "        new_workbook.remove(hash_sheet)\n",
+    "        \n",
+    "        # Save the new workbook with filtered data\n",
+    "        new_file_name = f'Filtered_Workbook_{unique_value}.xlsx'\n",
+    "        new_workbook.save(new_file_name)\n",
+    "        print(f\"Filtered workbook saved as '{new_file_name}'\")\n",
+    "\n",
+    "# Usage\n",
+    "process_main_workbook('main_workbook.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ac2b50f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ec7a1597",
+   "id": "cd65b70d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f4912f9e",
+   "id": "bd1fea29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a16cabd",
+   "id": "5ab0505c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8c09a31f",
+   "id": "9f68ec1b",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ed292f7d",
+   "id": "e37197f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c6cc19",
+   "id": "9b97f85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2187e3",
+   "id": "fe0331ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -323,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c16e2dcf",
+   "id": "53d369d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -331,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e3baa15",
+   "id": "973a3a78",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -339,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b2c18c6",
+   "id": "3eb7864f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -347,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba669a35",
+   "id": "c003842e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1026a91b",
+   "id": "fe6273ec",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a190e24c",
+   "id": "9196e64c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -421,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da64a6d7",
+   "id": "b3e2d33f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -429,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91acedfe",
+   "id": "2ef490a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -437,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d6d01e",
+   "id": "cbaaed6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "564ef62f",
+   "id": "a660bfda",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "836be245",
+   "id": "8cc42f13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8397cbc1",
+   "id": "3b504383",
    "metadata": {},
    "outputs": [],
    "source": [
