--- a/subtablesexcel.ipynb
+++ b/subtablesexcel.ipynb
@@ -3,7 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e20b063",
+   "id": "fbc3482d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "from openpyxl.utils.cell import get_column_letter\n",
+    "\n",
+    "# Function to read unique values from a column in a sheet\n",
+    "def read_unique_values(file_path, sheet_name, column_name):\n",
+    "    workbook = openpyxl.load_workbook(file_path)\n",
+    "    sheet = workbook[sheet_name]\n",
+    "    max_row = sheet.max_row\n",
+    "    \n",
+    "    unique_values = set()\n",
+    "    for row in range(2, max_row + 1):  # Start from 2nd row (excluding header)\n",
+    "        cell_value = sheet[f\"{column_name}{row}\"].value\n",
+    "        unique_values.add(cell_value)\n",
+    "    \n",
+    "    return list(unique_values)\n",
+    "\n",
+    "# Function to copy filtered data to a new sheet\n",
+    "def copy_filtered_data(source_sheet, target_sheet, unique_value):\n",
+    "    for row in source_sheet.iter_rows(min_row=2, values_only=True):\n",
+    "        if row[4] == unique_value:  # Assuming SF column is the 5th column (index 4)\n",
+    "            target_sheet.append(row)\n",
+    "\n",
+    "# Main function\n",
+    "def process_main_workbook(main_file_path):\n",
+    "    # Read unique values from 'Actuals($)' and 'Actuals(#)' sheets\n",
+    "    unique_values_dollar = read_unique_values(main_file_path, 'Actuals($)', 'E')\n",
+    "    unique_values_hash = read_unique_values(main_file_path, 'Actuals(#)', 'E')\n",
+    "    \n",
+    "    for unique_value in unique_values_dollar:\n",
+    "        # Create a copy of the main workbook\n",
+    "        new_workbook = openpyxl.load_workbook(main_file_path)\n",
+    "        \n",
+    "        # Apply filters to 'Actuals($)' and 'Actuals(#)' sheets\n",
+    "        dollar_sheet = new_workbook['Actuals($)']\n",
+    "        hash_sheet = new_workbook['Actuals(#)']\n",
+    "        dollar_filtered_sheet = new_workbook.create_sheet(title=f'Actuals($)_fil_{unique_value}')\n",
+    "        hash_filtered_sheet = new_workbook.create_sheet(title=f'Actuals(#)_fil_{unique_value}')\n",
+    "        \n",
+    "        # Copy filtered data to new sheets\n",
+    "        copy_filtered_data(dollar_sheet, dollar_filtered_sheet, unique_value)\n",
+    "        copy_filtered_data(hash_sheet, hash_filtered_sheet, unique_value)\n",
+    "        \n",
+    "        # Delete the original sheets\n",
+    "        new_workbook.remove(dollar_sheet)\n",
+    "        new_workbook.remove(hash_sheet)\n",
+    "        \n",
+    "        # Save the new workbook with filtered data\n",
+    "        new_file_name = f'Filtered_Workbook_{unique_value}.xlsx'\n",
+    "        new_workbook.save(new_file_name)\n",
+    "        print(f\"Filtered workbook saved as '{new_file_name}'\")\n",
+    "\n",
+    "# Usage\n",
+    "process_main_workbook('main_workbook.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd6fc71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ac2b50f",
+   "id": "85d66c53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd65b70d",
+   "id": "706c83dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bd1fea29",
+   "id": "2b367c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab0505c",
+   "id": "ac3839af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9f68ec1b",
+   "id": "88e98e9a",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e37197f6",
+   "id": "8af54e09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b97f85c",
+   "id": "cf90d8f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe0331ee",
+   "id": "7fd55b82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53d369d6",
+   "id": "b85df544",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -390,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "973a3a78",
+   "id": "0745ec75",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -398,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb7864f",
+   "id": "2e3fd0e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -406,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c003842e",
+   "id": "321a562d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fe6273ec",
+   "id": "69ed9e32",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9196e64c",
+   "id": "bc487652",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -480,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e2d33f",
+   "id": "135baaae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -488,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef490a2",
+   "id": "e5d58a35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -496,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbaaed6b",
+   "id": "20aaf1af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -504,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a660bfda",
+   "id": "3d9e7cc2",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc42f13",
+   "id": "aeb70504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b504383",
+   "id": "1133cef3",
    "metadata": {},
    "outputs": [],
    "source": [
